k8s/wms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wms-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wms
