k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wms-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: wms.com
    http:
      paths:
        - path: /api/*
          pathType: Prefix
          backend:
            service:
              name: wms-service
              port:
                number: 80
